--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,30 @@ edition = "2018"
 members = [
 	"kitchen/modules/adding-machine",
 	"kitchen/modules/basic-token",
-  "kitchen/check-membership",
-  "kitchen/child-trie",
-
+	"kitchen/check-membership",
+	"kitchen/child-trie",
+	"kitchen/currency-imbalances",
+	"kitchen/custom-origin",
+	"double-map",
+	"gen-random",
+	"generic-event",
+	"hello-substrate",
+	"linked-map",
+	"lockable-currency",
+	"module-constant-config",
+	"reservable-currency",
+	"schedule-on-finalize",
+	"simple-event",
+	"simple-map",
+	"single-value",
+	"social-network",
+	"srml-panic",
+	"storage-cache",
+	"struct-storage",
+	"treasury",
+	"vec-set",
+	"weight",
+	"kitchen/runtimes/super-node-runtime",
+	"kitchen/runtimes/super-node-genesis",
+	"kitchen/node",
 ]
