--- a/kitchen/Cargo.toml
+++ b/kitchen/Cargo.toml
@@ -13,12 +13,11 @@ members = [
   "modules/lockable-currency",
   "modules/module-constant-config",
   "modules/reservable-currency",
+  "modules/sauce-treasury",
   "modules/schedule-on-finalize",
   "modules/simple-event",
   "modules/simple-map",
   "modules/single-value",
-  "modules/smpl-treasury",
-  "modules/social-network",
   # "modules/srml-panic",
   "modules/storage-cache",
   "modules/struct-storage",
