--- a/kitchen/modules/sauce-derivative/Cargo.toml
+++ b/kitchen/modules/sauce-derivative/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "social-network"
+name = "smpl-derivative"
 version = "0.1.0"
 authors = ["4meta5"]
 edition = "2018"
@@ -17,7 +17,7 @@ std = [
 [dependencies.parity-scale-codec]
 default-features = false
 features = ['derive']
-version = '1.0.6'
+version = '1.1.0'
 
 [dependencies.support]
 default_features = false
@@ -41,6 +41,12 @@ rev = '6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e'
 default_features = false
 git = 'https://github.com/paritytech/substrate.git'
 package = 'sr-primitives'
+rev = '6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e'
+
+[dependencies.rstd]
+default_features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'sr-std'
 rev = '6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e'
 
 [dev-dependencies.primitives]
